--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ hockey, and more. Stream your favorite sports teams and events in HD, with no ca
 </div>
 </div>
 <video autoplay controls crossorigin playsinline>
-<source type="application/vnd.apple.mpegurl" src="https://edge01.iptv.digijadoo.net/live/bangla_vision/playlist.m3u8?md5=0U9cbA6I_BJqmKo7rwM8lg&expires=1724908405&user=ec6dd7dec84545a2a15edb664bb2d4aa "> </video>
+<source type="application/vnd.apple.mpegurl" src="https://livess.jagobd.com.bd/c3VydmVyX8RpbEU9Mi8xNy8yMDE0GIDU6RgzQ6NTAgdEoaeFzbF92YWxIZTO0U0ezN1IzMyfvcGVMZEJCTEFWeVN3PTOmdFsaWRtaW51aiPhnPTI2/banglav000.stream/playlist.m3u8 "> </video>
  </video>
 </body>
 <script>
